fixed centering of login buttons on mobile by standardizing header styling

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -265,7 +265,6 @@ ul.subnav.logged-out
     display: none
 
   .mobile-nav
-    padding-left: .25rem
     margin: 0 auto
     text-align: center
 
@@ -338,7 +337,6 @@ ul.subnav.logged-out
 
   .navbar .mobile-nav
     padding-top: .5rem
-    padding-left: .5rem
     margin: 0 auto
     text-align: center
 
@@ -356,6 +354,9 @@ ul.subnav.logged-out
 
     .right
       margin-right: 1rem
+
+    .left
+      margin-left: 1rem
 
 @media (max-width: $media-small-max)
   .navbar > .mobile-nav > .right
